RESOLVED FIXED103378
[sh4] Fix compilation warnings in JavaScriptCore JIT for sh4 arch
https://bugs.webkit.org/show_bug.cgi?id=103378
Summary [sh4] Fix compilation warnings in JavaScriptCore JIT for sh4 arch
Julien Brianceau
Reported 2012-11-27 01:28:47 PST
Fix the following compilation warnings in JavaScriptCore JIT for sh4 arch: /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:1796:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:1810:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:1824:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:1845:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:1898:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:1933:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:1967:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:2002:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare] /local/wkit/slavebuildbot/workspace/qt-linux-sh4-release/build/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:2043:21: warning: comparison between ‘enum JSC::MacroAssemblerSH4::ResultCondition’ and ‘enum JSC::MacroAssemblerSH4::RelationalCondition’ [-Wenum-compare]
Attachments
Remove warnings for sh4 arch in JavaScriptCore JIT (3.57 KB, patch)
2012-11-27 01:35 PST, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2012-11-27 01:35:45 PST
Created attachment 176197 [details] Remove warnings for sh4 arch in JavaScriptCore JIT
WebKit Review Bot
Comment 2 2012-11-30 02:20:22 PST
Comment on attachment 176197 [details] Remove warnings for sh4 arch in JavaScriptCore JIT Clearing flags on attachment: 176197 Committed r136218: <http://trac.webkit.org/changeset/136218>
WebKit Review Bot
Comment 3 2012-11-30 02:20:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.