[sh4] Fix compilation warnings in JavaScriptCore JIT for sh4 arch https://bugs.webkit.org/show_bug.cgi?id=103378

Patch by Julien BRIANCEAU <jbrianceau@nds.com> on 2012-11-30
Reviewed by Filip Pizlo.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::branchTest32):
(JSC::MacroAssemblerSH4::branchAdd32):
(JSC::MacroAssemblerSH4::branchMul32):
(JSC::MacroAssemblerSH4::branchSub32):
(JSC::MacroAssemblerSH4::branchOr32):

Canonical link: https://commits.webkit.org/121831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136218 268f45cc-cd09-0410-ab3c-d52691b4dbfc